--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,21 +8,19 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     container:
       image:  google/dart:latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Git checkout
+      uses: actions/checkout@v2
     - name: Install dependencies
       run: pub get
     - name: Run tests
       run: pub run test
-    - name: Run test coverage
+    - name: Measure coverage
       run: pub run test_coverage
-    - name: Upload coverage to Codecov
+    - name: Upload coverage
       uses: codecov/codecov-action@v1.0.6
       with:
         token: ${{secrets.CODECOV_TOKEN}}
