--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ repository: https://github.com/jpnurmi/interval_tree
 issue_tracker: https://github.com/jpnurmi/interval_tree/issues
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 dependencies:
   meta: ^1.1.8
   quiver: ^2.0.5
