--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ repository: https://github.com/jpnurmi/interval_tree
 issue_tracker: https://github.com/jpnurmi/interval_tree/issues
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 dependencies:
   meta: ^1.1.8
-  quiver: ^2.0.5
+  quiver: ^3.0.1
 dev_dependencies:
   test: ^1.14.2
-  test_coverage: ^0.4.1
+  test_cov: ^1.0.1
