Update to Dart 3 and bump to 0.4.0

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,17 +1,18 @@
 name: analyze
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   package-analysis:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4.1.1
       - name: Analyze package
         uses: axel-op/dart-package-analyzer@stable
         with:
