--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,21 @@
 name: interval_tree
-version: 0.3.0
+version: 0.4.1
+maintainer: Simon Lightfoot (@slightfoot)
 description: >-
   A non-overlapping interval tree with support for calculating unions,
   intersections, and differences between individual intervals and entire
   trees.
-homepage: https://github.com/jpnurmi/interval_tree
-repository: https://github.com/jpnurmi/interval_tree
-issue_tracker: https://github.com/jpnurmi/interval_tree/issues
+homepage: https://github.com/fluttercommunity/interval_tree
+repository: https://github.com/fluttercommunity/interval_tree
+issue_tracker: https://github.com/fluttercommunity/interval_tree/issues
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
+
 dependencies:
-  meta: ^1.1.8
-  quiver: ^3.0.1
+  lints: ^3.0.0
+  meta: ^1.11.0
+  quiver: ^3.2.1
+
 dev_dependencies:
-  test: ^1.14.2
-  test_cov: ^1.0.1
+  test: ^1.24.3
