--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,29 @@
 name: build
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image:  google/dart:latest
+      image: dart:stable
     steps:
     - name: Git checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4.1.1
     - name: Install dependencies
-      run: pub get
-    - name: Run tests
-      run: pub run test
-    - name: Measure coverage
-      run: pub run test_cov
+      run: dart pub get
+    - name: Install coverage tool
+      run: dart pub global activate coverage
+    - name: Run tests with coverage
+      run: dart pub global run coverage:test_with_coverage
     - name: Upload coverage
-      uses: codecov/codecov-action@v1.0.6
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         token: ${{secrets.CODECOV_TOKEN}}
         file: coverage/lcov.info
